--- a/src/main/webapp/partials/categories.html
+++ b/src/main/webapp/partials/categories.html
@@ -1,30 +1,10 @@
 <div>
 	<h1>{{locres.Head}}</h1>
 </div>
-<!--<div>
+<div>
 	<div ng-repeat="category in categories">
 		<ul>
 			<li><a ng-click="getPurchasesByCategory(category)">{{ category.name }}</a></li>
 		</ul>
 	</div>	
-</div>-->
-
-<accordion close-others=true>
-<!--	<accordion-group heading="Static Header, initially expanded" is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
-		This content is straight in the template.
-	</accordion-group>-->
-	<accordion-group ng-repeat="category in categories" heading="{{category.name}}">
-		empty
-	</accordion-group>
-<!--	<accordion-group heading="Dynamic Body Content">
-		<p>The body of the accordion group grows to fit the contents</p>
-		<button class="btn btn-default btn-sm" ng-click="addItem()">Add Item</button>
-		<div ng-repeat="item in items">{{item}}</div>
-	</accordion-group>-->
-	<accordion-group is-open="status.open">
-		<accordion-heading>
-			I can have markup, too! <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
-		</accordion-heading>
-		This is just some content to illustrate fancy headings.
-	</accordion-group>
-</accordion>
+</div>
