--- a/src/main/webapp/partials/categories.html
+++ b/src/main/webapp/partials/categories.html
@@ -11,7 +11,7 @@
 </div>-->
 
 <accordion close-others="oneAtATime">
-	<accordion-group heading="{{category.name}}" is-open="category.open" ng-repeat="category in categories">
+	<accordion-group heading="{{category.name}}" is-open="category.open" ng-repeat="category in categories" ng-click="getNestedPurchasesByCategory(category, $index)">
 		<accordion-heading>
 			{{category.name}}<!-- <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': category.open, 'glyphicon-chevron-right': !category.open}"></i>-->
 		</accordion-heading>
