Category list: table

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -43,3 +43,9 @@ width: 2400px;
 .newPurchaseForm {
   width: 380px;
 }
+.newPurchaseForm {
+  width: 380px;
+}
+.categoryList {
+  width: 760px;
+}
