--- a/src/main/webapp/partials/categories.html
+++ b/src/main/webapp/partials/categories.html
@@ -22,7 +22,7 @@
 				<td>{{purchase.name}}</td>
 				<td>{{purchase.price}}</td>
 				<td>
-					<button type="button" class="btn btn-sm btn-default" ng-click="editPurchase()">{{locres.a_edit}}</button>
+					<button type="button" class="btn btn-sm btn-default" ng-click="editPurchase(purchase)">{{locres.a_edit}}</button>
 					<button type="button" class="btn btn-sm btn-danger" ng-click="deletePurchase()">{{locres.a_delete}}</button>
 				</td>
 			</tr>
