--- a/src/main/webapp/partials/newpurchase.html
+++ b/src/main/webapp/partials/newpurchase.html
@@ -1,5 +1,5 @@
 <div>
-	<h1>{{data.locres.Title}}</h1>
+	<h1>{{isPurchaseEdit ? data.locres.TitleEdit : data.locres.Title}}</h1>
 </div>
 <!--
 <div>
