Categories: prev next

--- a/src/main/webapp/partials/categories.html
+++ b/src/main/webapp/partials/categories.html
@@ -28,6 +28,7 @@
 			</tr>
 			</tbody>
 		</table>
+		<div><a ng-show="category.prev" ng-click="getPage(-1)">назад</a> &nbsp;текущий месяц&nbsp; <a ng-show="category.next" ng-click="getPage(1)">далее</a> </div>
 	</accordion-group>
 </accordion>
 </form>
